--- a/index.html
+++ b/index.html
@@ -137,71 +137,96 @@
 
         <header>
             <div>
-                <h4 style="font-weight: 500;">Dashboard</h4>
+                <h4>Dashboard</h4>
             </div>
 
             <div class="header-btns">
-                <button class="lang-dropdown" id="directionToggle">
+                <button class="lang-dropdown">
                     <span id="lang">Lang ▼</span>
                     <div class="lang-dropdown-content">
                         <p id="directionLtr">English</p>
                         <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
-                <button id="darkModeToggle"><a href=""><iconify-icon
-                            icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
-                <button><a href="profile.html"><i class='bx bx-user-circle'></i></a></button>
+                <button id="darkModeToggle">
+                    <iconify-icon icon="bitcoin-icons:moon-filled"></iconify-icon>
+                </button>
+                <button>
+                    <a href="profile.html"><i class='bx bx-user-circle'></i></a>
+                </button>
             </div>
         </header>
+
         <h1 class="welcome-text-dashboard mt-1">Welcome Back, <span>Vijay</span></h1>
         <p class="quick-txt">Here are some quick links that you can use.</p>
+
+        <div class="notification-section">
+            <h2>Notifications</h2>
+            <div class="notification">
+                <p><strong>Admin:</strong> Please update your profile information by the end of this week.</p>
+                <span class="timestamp">10 mins ago</span>
+            </div>
+            <div class="notification">
+                <p><strong>HR:</strong> The annual company meeting is scheduled for next Friday at 2 PM.</p>
+                <span class="timestamp">30 mins ago</span>
+            </div>
+        </div>
 
         <div class="row row-cols-2 row-cols-lg-4 g-4 mt-2">
             <div class="col dashboard-cols">
                 <div class="card h-100">
-                    <div class="card-body">
+                    <div class="card-body d-lg-flex align-items-center">
                         <div class="card-logo">
                             <div><img src="Images/calendar.png" alt=""></div>
                         </div>
-                        <p class="card-text">5 Days</p>
-                        <h5 class="card-title">Total Leaves Taken</h5>
+                        <div class="mx-3">
+                            <p class="card-text">5 Days</p>
+                            <h5 class="card-title">Total Leaves Taken</h5>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col dashboard-cols">
                 <div class="card h-100">
-                    <div class="card-body">
+                    <div class="card-body d-lg-flex align-items-center">
                         <div class="card-logo">
                             <div><img src="Images/growth.png" alt=""></div>
                         </div>
-                        <p class="card-text">95%</p>
-                        <h5 class="card-title">Attendance Percentage</h5>
+                        <div class="mx-3">
+                            <p class="card-text">95%</p>
+                            <h5 class="card-title">Attendance Percentage</h5>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col dashboard-cols">
                 <div class="card h-100">
-                    <div class="card-body">
+                    <div class="card-body d-lg-flex align-items-center">
                         <div class="card-logo">
                             <div><img src="Images/interview.png" alt=""></div>
                         </div>
-                        <p class="card-text">2 Requests</p>
-                        <h5 class="card-title">Pending Reimbursement Requests</h5>
+                        <div class="mx-3">
+                            <p class="card-text">2 Requests</p>
+                            <h5 class="card-title">Pending Reimbursement Requests</h5>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col dashboard-cols">
                 <div class="card h-100">
-                    <div class="card-body">
+                    <div class="card-body d-lg-flex align-items-center">
                         <div class="card-logo">
                             <div><img src="Images/status.png" alt=""></div>
                         </div>
-                        <p class="card-text">$5000 Remaining</p>
-                        <h5 class="card-title">Current Loan Status</h5>
+                        <div class="mx-3">
+                            <p class="card-text">$5000 Remaining</p>
+                            <h5 class="card-title">Current Loan Status</h5>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
 
         <h4 style="font-weight: 500;" class="my-4">Recent Updates</h4>
         <div id="apexchart"></div>
