--- a/leaves.html
+++ b/leaves.html
@@ -139,7 +139,7 @@
                 <h1 class="welcome-text">Lea<span>ves</span></h1>
             </div>
             <div class="header-btns">
-                <button class="lang-dropdown" id="directionToggle">
+                <button class="lang-dropdown">
                     <span id="lang">Lang ▼</span>
                     <div class="lang-dropdown-content">
                         <p id="directionLtr">English</p>
