--- a/attendance.html
+++ b/attendance.html
@@ -11,8 +11,8 @@
     <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
 </head>
+
 
 <body>
 
@@ -185,43 +185,81 @@
             </div>
         </div>
 
-        <div class="row mt-4 mt-lg-5">
-            <h4>View Work Schedules</h4>
-            <div class="leave-history mt-3 px-3 px-md-5" style="overflow-x:auto;">
-                <table>
-                    <tr>
-                        <th>S.No</th>
-                        <th>Date</th>
-                        <th>Shift Start</th>
-                        <th>Shift End</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>8 May 2024</td>
-                        <td>08:00 AM</td>
-                        <td>05:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>8 May 2024</td>
-                        <td>08:00 AM</td>
-                        <td>05:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>8 May 2024</td>
-                        <td>08:00 AM</td>
-                        <td>05:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>8 May 2024</td>
-                        <td>08:00 AM</td>
-                        <td>05:00 PM</td>
-                    </tr>
-                </table>
+        <section class="attendance-section  mt-5">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <div>
+                    <h4 class="d-none d-lg-block">Attendance Overview</h4>
+                </div>
+                <button class="Download-Summary-btn">
+                    <i class='bx bx-download'></i> Download Summary
+                </button>
             </div>
-        </div>
+
+            <div class="row mb-4">
+                <div class="col-md-6 mb-3 mb-md-0">
+                    <input type="text" class="form-control date-picker" id="selectDateAttendence"
+                        placeholder="Select Date">
+                </div>
+                <div class="col-md-6">
+                    <input type="text" class="form-control date-range-picker" id="dateRange"
+                        placeholder="Select Date Range">
+                </div>
+            </div>
+
+            <div class="table-responsive">
+                <div class="dashborad-table-col">
+                    <table class="table-dashboard">
+                        <thead>
+                            <tr>
+                                <th>Date</th>
+                                <th>Status</th>
+                                <th>In</th>
+                                <th>Out</th>
+                                <th>Payable Hours</th>
+                                <th>OT/SOT</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>2024-08-14</td>
+                                <td>Present</td>
+                                <td>09:00 AM</td>
+                                <td>05:00 PM</td>
+                                <td>8h</td>
+                                <td>1h</td>
+                            </tr>
+                            <tr>
+                                <td>2024-08-13</td>
+                                <td>Present</td>
+                                <td>09:15 AM</td>
+                                <td>05:15 PM</td>
+                                <td>8h</td>
+                                <td>0.5h</td>
+                            </tr>
+                            <tr>
+                                <td>2024-08-13</td>
+                                <td>Present</td>
+                                <td>09:15 AM</td>
+                                <td>05:15 PM</td>
+                                <td>8h</td>
+                                <td>0.5h</td>
+                            </tr>
+                            <tr>
+                                <td>2024-08-13</td>
+                                <td>Present</td>
+                                <td>09:15 AM</td>
+                                <td>05:15 PM</td>
+                                <td>8h</td>
+                                <td>0.5h</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
+
+
+
 
         <div class="empty"></div>
 
@@ -233,7 +271,55 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/min/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.js"></script>
+    <script>
+        $(function () {
+            $('#dateRange').daterangepicker({
+                opens: 'left',
+                autoUpdateInput: false,
+                locale: {
+                    cancelLabel: 'Clear'
+                }
+            }, function (start, end, label) {
+                $('#dateRange').val(start.format('DD/MM/YYYY') + ' - ' + end.format('DD/MM/YYYY'));
+            });
 
+            $('#dateRange').on('cancel.daterangepicker', function (ev, picker) {
+                $(this).val('');
+            });
+        });
+
+        $(function () {
+            $('#selectDateAttendence').daterangepicker({
+                opens: 'left',
+                autoUpdateInput: false,
+                locale: {
+                    format: 'DD/MM/YYYY',
+                    cancelLabel: 'Clear'
+                },
+                ranges: {
+                    'Today': [moment(), moment()],
+                    'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+                    'Last 7 Days': [moment().subtract(6, 'days'), moment()],
+                    'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+                    'This Month': [moment().startOf('month'), moment().endOf('month')],
+                    'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')],
+                    'Last 3 Months': [moment().subtract(3, 'months').startOf('month'), moment().endOf('month')],
+                }
+            }, function (start, end, label) {
+                $('#selectDateAttendence').val(start.format('DD/MM/YYYY') + ' - ' + end.format('DD/MM/YYYY'));
+            });
+
+            $('#selectDateAttendence').on('cancel.daterangepicker', function (ev, picker) {
+                $(this).val('');
+            });
+        });
+
+
+    </script>
 
 </body>
 
