--- a/leaves.html
+++ b/leaves.html
@@ -157,27 +157,42 @@
         </div>
 
         <div class="row g-3 g-md-4">
-            <div class="col col-md-4 dashboard-cols">
+            <div class="col dashboard-cols">
                 <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Annual Leave</h5>
-                        <p class="card-text">10 Days</p>
+                    <div class="card-body d-lg-flex align-items-center">
+                        <div class="card-logo">
+                            <div class="m-auto"><img src="Images/leave.png" alt=""></div>
+                        </div>
+                        <div class="mx-2 mt-3 mt-lg-0 text-center text-lg-start">
+                            <h5 class="card-text">10 Days</h5>
+                            <p class="card-title">Annual Leave</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col col-md-4 dashboard-cols">
+            <div class="col dashboard-cols">
                 <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Sick Leave</h5>
-                        <p class="card-text">5 Days</p>
+                    <div class="card-body d-lg-flex align-items-center">
+                        <div class="card-logo">
+                            <div class="m-auto"><img src="Images/patient.png" alt=""></div>
+                        </div>
+                        <div class="mx-2 mt-3 mt-lg-0 text-center text-lg-start">
+                            <h5 class="card-text">5 Days</h5>
+                            <p class="card-title">Sick Leave</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col12 col-md-4 dashboard-cols">
+            <div class="col dashboard-cols">
                 <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Other Leave</h5>
-                        <p class="card-text">2 Days</p>
+                    <div class="card-body d-lg-flex align-items-center">
+                        <div class="card-logo">
+                            <div class="m-auto"><img src="Images/dismissal.png" alt=""></div>
+                        </div>
+                        <div class="mx-2 mt-3 mt-lg-0 text-center text-lg-start">
+                            <h5 class="card-text">5 Days</h5>
+                            <p class="card-title">Other Leave</p>
+                        </div>
                     </div>
                 </div>
             </div>
