--- a/attendance.html
+++ b/attendance.html
@@ -158,28 +158,43 @@
             <h4 style="font-weight: 500;"></h4>
         </div>
 
-        <div class="row g-3 g-md-4">
-            <div class="col col-md-4 dashboard-cols">
+        <div class="row g-2 g-md-4">
+            <div class="col dashboard-cols">
                 <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Annual Leave</h5>
-                        <p class="card-text">10 Days</p>
+                    <div class="card-body d-lg-flex align-items-center">
+                        <div class="card-logo">
+                            <div class="m-auto"><img src="Images/check.png" alt=""></div>
+                        </div>
+                        <div class="mx-2 mt-3 mt-lg-0 text-center text-lg-start">
+                            <h5 class="card-text">10 Days</h5>
+                            <p class="card-title">Days Present</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col col-md-4 dashboard-cols">
+            <div class="col dashboard-cols">
                 <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Sick Leave</h5>
-                        <p class="card-text">5 Days</p>
+                    <div class="card-body d-lg-flex align-items-center">
+                        <div class="card-logo">
+                            <div class="m-auto"><img src="Images/absence.png" alt=""></div>
+                        </div>
+                        <div class="mx-2 mt-3 mt-lg-0 text-center text-lg-start">
+                            <h5 class="card-text">5 Days</h5>
+                            <p class="card-title">Days Absent</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col12 col-md-4 dashboard-cols">
+            <div class="col dashboard-cols">
                 <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Other Leave</h5>
-                        <p class="card-text">2 Days</p>
+                    <div class="card-body d-lg-flex align-items-center">
+                        <div class="card-logo">
+                            <div class="m-auto"><img src="Images/late.png" alt=""></div>
+                        </div>
+                        <div class="mx-2 mt-3 mt-lg-0 text-center text-lg-start">
+                            <h5 class="card-text">2 Days</h5>
+                            <p class="card-title">Days Late</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -188,23 +203,23 @@
         <section class="attendance-section  mt-5">
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <div>
-                    <h4 class="d-none d-lg-block">Attendance Overview</h4>
+                    <h4>Attendance Overview</h4>
                 </div>
-                <button class="Download-Summary-btn">
-                    <i class='bx bx-download'></i> Download Summary
-                </button>
+
             </div>
 
             <div class="row mb-4">
-                <div class="col-md-6 mb-3 mb-md-0">
-                    <input type="text" class="form-control date-picker" id="selectDateAttendence"
+                <div class="col-6 mb-3 mb-md-0">
+                    <input type="text" class="date-picker" id="selectDateAttendence"
                         placeholder="Select Date">
                 </div>
-                <div class="col-md-6">
-                    <input type="text" class="form-control date-range-picker" id="dateRange"
-                        placeholder="Select Date Range">
+                <div class="col-6 mb-3 mb-md-0 d-flex justify-content-end">
+                    <button class="Download-Summary-btn">
+                        <i class='bx bx-download'></i> Download Summary
+                    </button>
                 </div>
             </div>
+
 
             <div class="table-responsive">
                 <div class="dashborad-table-col">
@@ -290,9 +305,7 @@
             $('#dateRange').on('cancel.daterangepicker', function (ev, picker) {
                 $(this).val('');
             });
-        });
 
-        $(function () {
             $('#selectDateAttendence').daterangepicker({
                 opens: 'left',
                 autoUpdateInput: false,
@@ -317,7 +330,6 @@
                 $(this).val('');
             });
         });
-
 
     </script>
 
