--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 <body>
 
     <div class="row login d-flex justify-content-center align-items-center">
-        <div class="col-lg-6 log-right d-flex justify-content-center align-items-center px-5">
+        <div class="col-lg-6 log-right d-flex flex-column justify-content-center align-items-center px-5">
             <form action="">
                 <div class="login-pg-logo">
                     <img src="Images/logo (2).png" alt="" width="250">
@@ -51,6 +51,11 @@
                     </div>
                 </div>
             </form>
+            <div class="d-flex gap-3 mt-4 lg-links">
+                <div>&copy; TamilAccounting</div>
+                <div><a href="">Contact</a></div>
+                <div><a href="">Privacy & Terms</a></div>
+            </div>
         </div>
     </div>
 
