--- a/tickets.html
+++ b/tickets.html
@@ -139,17 +139,20 @@
             <div>
                 <h1 class="welcome-text">Tick<span>et</span></h1>
             </div>
-            <div class="header-btns">
+            <div class="header-btns d-flex justify-content-center align-items-center">
+                <button id="darkModeToggle">
+                    <iconify-icon id="themeIcon" icon="material-symbols:dark-mode-outline-rounded"></iconify-icon>
+                </button>
                 <button class="lang-dropdown">
-                    <span id="lang">Lang ▼</span>
+                    <span id="lang"><iconify-icon icon="mingcute:earth-2-line"></iconify-icon></span>
                     <div class="lang-dropdown-content">
                         <p id="directionLtr">English</p>
                         <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
-                <button id="darkModeToggle"><a href=""><iconify-icon
-                            icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
-                <button><a href="profile.html"><i class='bx bx-user-circle'></i></a></button>
+                <button>
+                    <a href="profile.html"><i class='bx bx-user-circle'></i></a>
+                </button>
             </div>
         </header>
 
