--- a/payroll.html
+++ b/payroll.html
@@ -106,18 +106,20 @@
                 </a>
             </li>
             <li>
-                <a href="reimbursement.html" >
+                <a href="reimbursement.html">
                     <div><i class='bx bx-wallet'></i></div>
                     <div><span class="">Reimbursement</span></div>
                 </a>
             </li>
             <li>
-                <button class="d-lg-none dropdown-btn" data-bs-toggle="dropdown" aria-expanded="false" style="color:#0ac30a;">
+                <button class="d-lg-none dropdown-btn" data-bs-toggle="dropdown" aria-expanded="false"
+                    style="color:#0ac30a;">
                     <div><i class='bx bxs-chevron-up'></i></div>
                     <div><span class="">More</span></div>
                 </button>
                 <ul class="dropdown-menu dropup">
-                    <li><a class="dropdown-item" href="payroll.html" style="color:#0ac30a;"><i class='bx bx-credit-card-alt'></i>Payroll</a>
+                    <li><a class="dropdown-item" href="payroll.html" style="color:#0ac30a;"><i
+                                class='bx bx-credit-card-alt'></i>Payroll</a>
                     </li>
                     <li><a class="dropdown-item" href="attendance.html"><i class='bx bxs-star-half'></i>Attendance</a>
                     </li>
@@ -138,17 +140,20 @@
             <div>
                 <h1 class="welcome-text">Pay<span>roll</span></h1>
             </div>
-            <div class="header-btns">
+            <div class="header-btns d-flex justify-content-center align-items-center">
+                <button id="darkModeToggle">
+                    <iconify-icon id="themeIcon" icon="material-symbols:dark-mode-outline-rounded"></iconify-icon>
+                </button>
                 <button class="lang-dropdown">
-                    <span id="lang">Lang ▼</span>
+                    <span id="lang"><iconify-icon icon="mingcute:earth-2-line"></iconify-icon></span>
                     <div class="lang-dropdown-content">
                         <p id="directionLtr">English</p>
                         <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
-                <button id="darkModeToggle"><a href=""><iconify-icon
-                            icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
-                <button><a href="profile.html"><i class='bx bx-user-circle'></i></a></button>
+                <button>
+                    <a href="profile.html"><i class='bx bx-user-circle'></i></a>
+                </button>
             </div>
         </header>
 
