--- a/profile.html
+++ b/profile.html
@@ -139,17 +139,21 @@
                 <h1 class="welcome-text">My<span> Profile</span></h1>
             </div>
             <div class="header-btns">
-                <button class="lang-dropdown">
-                    <span id="lang">Lang ▼</span>
-                    <div class="lang-dropdown-content">
-                        <p id="directionLtr">English</p>
-                        <p id="directionRlt">Arabic</p>
-                    </div>
-                </button>
-                <button id="darkModeToggle"><a href=""><iconify-icon
-                            icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
-                <button><a href="profile.html"><i class='bx bx-user-circle' style="color: #088738;"></i></a></button>
-            </div>
+                <div class="header-btns d-flex justify-content-center align-items-center">
+                    <button id="darkModeToggle">
+                        <iconify-icon id="themeIcon" icon="material-symbols:dark-mode-outline-rounded"></iconify-icon>
+                    </button>
+                    <button class="lang-dropdown">
+                        <span id="lang"><iconify-icon icon="mingcute:earth-2-line"></iconify-icon></span>
+                        <div class="lang-dropdown-content">
+                            <p id="directionLtr">English</p>
+                            <p id="directionRlt">Arabic</p>
+                        </div>
+                    </button>
+                    <button>
+                        <a href="profile.html"><i class='bx bx-user-circle'></i></a>
+                    </button>
+                </div>
         </header>
 
         <div class="row mt-3 mx-1 m-lg-4 d-flex justify-content-between">
