--- a/leaves.html
+++ b/leaves.html
@@ -139,19 +139,24 @@
                 <h1 class="welcome-text">Lea<span>ves</span></h1>
             </div>
             <div class="header-btns d-flex justify-content-center align-items-center">
-                <button id="darkModeToggle">
-                    <iconify-icon id="themeIcon" icon="material-symbols:dark-mode-outline-rounded"></iconify-icon>
+                <button id="hamburgerMenu">
+                    <iconify-icon icon="material-symbols:menu"></iconify-icon>
                 </button>
-                <button class="lang-dropdown">
-                    <span id="lang"><iconify-icon icon="mingcute:earth-2-line"></iconify-icon></span>
-                    <div class="lang-dropdown-content">
-                        <p id="directionLtr">English</p>
-                        <p id="directionRlt">Arabic</p>
-                    </div>
-                </button>
-                <button>
-                    <a href="profile.html"><i class='bx bx-user-circle'></i></a>
-                </button>
+                <div id="headerMenu" class="menu-items">
+                    <button id="darkModeToggle">
+                        <iconify-icon id="themeIcon" icon="material-symbols:dark-mode-outline-rounded"></iconify-icon>
+                    </button>
+                    <button class="lang-dropdown">
+                        <span id="lang"><iconify-icon icon="mingcute:earth-2-line"></iconify-icon></span>
+                        <div class="lang-dropdown-content">
+                            <p id="directionLtr">English</p>
+                            <p id="directionRlt">Arabic</p>
+                        </div>
+                    </button>
+                    <button>
+                        <a href="profile.html"><i class='bx bx-user-circle'></i></a>
+                    </button>
+                </div>
             </div>
         </header>
 
