--- a/profile.html
+++ b/profile.html
@@ -138,8 +138,11 @@
             <div>
                 <h1 class="welcome-text">My<span> Profile</span></h1>
             </div>
-            <div class="header-btns">
-                <div class="header-btns d-flex justify-content-center align-items-center">
+            <div class="header-btns d-flex justify-content-center align-items-center">
+                <button id="hamburgerMenu">
+                    <iconify-icon icon="material-symbols:menu"></iconify-icon>
+                </button>
+                <div id="headerMenu" class="menu-items">
                     <button id="darkModeToggle">
                         <iconify-icon id="themeIcon" icon="material-symbols:dark-mode-outline-rounded"></iconify-icon>
                     </button>
@@ -154,6 +157,7 @@
                         <a href="profile.html"><i class='bx bx-user-circle'></i></a>
                     </button>
                 </div>
+            </div>
         </header>
 
         <div class="row mt-3 mx-1 m-lg-4 d-flex justify-content-between">
