--- a/profile.html
+++ b/profile.html
@@ -182,34 +182,36 @@
                         <h5>Personal Details</h5>
                         <div>
                             <button id="editPersonalDetailsBtn" onclick="editPersonalDetailsBtn()">Edit</button>
-                            <button id="savePersonalDetailsBtn" onclick="savePersonalDetailsBtn()">Save</button>
+                            <button id="savePersonalDetailsBtn" onclick="savePersonalDetailsBtn()"
+                                style="display:none;">Save</button>
                         </div>
                     </div>
-                    <div class="mt-3 per-details d-lg-flex">
+                    <div class="mt-3 per-details d-lg-flex" id="personal-details">
                         <div class="col-lg-6">
-                            <label for="">Employee Name </label> <br>
-                            <input type="text" value="Mr. Keny Kayal"><br>
+                            <label for="">Employee Name</label> <br>
+                            <input type="text" value="Mr. Keny Kayal" readonly><br>
                             <label for="">Employee Id</label> <br>
-                            <input type="text" value="001/2024"><br>
+                            <input type="text" value="001/2024" readonly><br>
                             <label for="">Mobile Phone</label> <br>
-                            <input type="text" value="434534"><br>
-                            <label for="">Email </label> <br>
-                            <input type="text" value="kenny@tamilacc.xyz"><br>
+                            <input type="text" value="434534" readonly><br>
+                            <label for="">Email</label> <br>
+                            <input type="text" value="kenny@tamilacc.xyz" readonly><br>
                             <label for="">Gender</label> <br>
-                            <input type="text" value="Male">
+                            <input type="text" value="Male" readonly>
                         </div>
                         <div class="col-lg-6">
                             <label for="">Date of Birth</label><br>
-                            <input type="text" value="02/05/1995"><br>
+                            <input type="text" value="02/05/1995" readonly><br>
                             <label for="">Marital Status</label><br>
-                            <input type="text" value="Married"><br>
+                            <input type="text" value="Married" readonly><br>
                             <label for="">Status</label> <br>
-                            <input type="text" value="Active"><br>
+                            <input type="text" value="Active" readonly><br>
                             <label for="">Age</label> <br>
-                            <input type="text" value="29"><br>
+                            <input type="text" value="29" readonly><br>
                         </div>
                     </div>
                 </div>
+
             </div>
 
             <div class="col-lg-5 mt-3 mt-lg-4" id="pro-addres">
@@ -223,11 +225,11 @@
                     </div>
                     <div class="mt-3 per-details">
                         <label for="">State</label><br>
-                        <input type="text" value="Perlis"><br>
+                        <input type="text" value="Perlis" readonly><br>
                         <label for="">Country</label><br>
-                        <input type="text" value="Malaysia"><br>
+                        <input type="text" value="Malaysia" readonly><br>
                         <label for="">Post/Zip Code </label><br>
-                        <input type="text" value="434534"><br>
+                        <input type="text" value="434534" readonly><br>
                     </div>
                 </div>
             </div>
