--- a/leaves.html
+++ b/leaves.html
@@ -217,7 +217,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="d-flex justify-content-center align-items-center ">
                             <span class="payroll-back-btn d-lg-none">
-                                <a href="payroll.html"><iconify-icon icon="weui:back-filled"></iconify-icon></a>
+                                <a href="leaves.html"><iconify-icon icon="weui:back-filled"></iconify-icon></a>
                             </span>
                             <span>INV-000181</span>
                         </div>
