--- a/payroll.html
+++ b/payroll.html
@@ -493,7 +493,7 @@
             </div>
         </div>
 
-        <button class="payroll-plus-btn" id="payroll-plus-btn">+</button>
+        <button class="payroll-plus-btn">+</button>
 
     </section>
     <div class="empty d-lg-none"></div>
