--- a/attendance.html
+++ b/attendance.html
@@ -218,8 +218,15 @@
 
             <div class="row mb-4">
                 <div class="col-6 mb-3 mb-md-0">
-                    <input type="text" class="date-picker" id="selectDateAttendence" placeholder="Select Date">
+                    <div class="input-group">
+                        <input type="text" class="form-control date-picker" id="selectDateAttendence"
+                            placeholder="Select Date">
+                        <span class="input-group-text">
+                            <i class='bx bxs-calendar'></i>
+                        </span>
+                    </div>
                 </div>
+
                 <div class="col-6 mb-3 mb-md-0 d-flex justify-content-end">
                     <button class="Download-Summary-btn">
                         <i class='bx bx-download'></i> Download Summary
