--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                     <div style="position: relative;">
                         <label for="enterPass">Password</label> <br>
                         <input type="password" id="enterPass">
-                        <span id="togglePassword" style="position: absolute; right: 10px; top: 30px; cursor: pointer;">
+                        <span id="togglePassword" class="login-eye">
                             <iconify-icon icon="mdi:eye-off-outline"></iconify-icon>
                         </span>
                     </div>
