--- a/login.html
+++ b/login.html
@@ -65,11 +65,23 @@
 
     <!-- Scripts -->
 
-    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script>
+
+        function forgotPass() {
+            event.preventDefault();
+            document.getElementById("login-con").style.display = "none";
+            document.getElementById("forgotPass-con").style.display = "block";
+        }
+
+        function backLogPass() {
+            event.preventDefault();
+            document.getElementById("login-con").style.display = "block";
+            document.getElementById("forgotPass-con").style.display = "none";
+        }
+
         const togglePassword = document.getElementById('togglePassword');
         const passwordInput = document.getElementById('enterPass');
 
